# dml-language-server

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  USAGE.md  clients.md
.github/workflows/: binaries.yml  nightly.yml  rust.yml  scans.yml
example_files/: example_lint_cfg.README  example_lint_cfg.json
src/: cmd.rs  concurrency.rs  config.rs  file_management.rs  file_tests.rs  lib.rs  logging.rs  lsp_data.rs  main.rs
src/actions/: analysis_queue.rs  analysis_storage.rs  hover.rs  mod.rs  notifications.rs  requests.rs  semantic_lookup.rs  work_pool.rs
src/analysis/: mod.rs  provisionals.rs  reference.rs  scope.rs  symbols.rs
src/analysis/parsing/: expression.rs  lexer.rs  misc.rs  parser.rs  statement.rs  structure.rs  tree.rs  types.rs
src/analysis/structure/: expressions.rs  objects.rs  statements.rs  toplevel.rs
src/analysis/templating/: methods.rs  objects.rs  topology.rs  traits.rs
src/backends/: hierarchy.rs  mod.rs  scip.rs
src/dfa/: client.rs  main.rs
src/lint/: README.md  features.md  mod.rs
src/lint/rules/: indentation.rs  linebreaking.rs  linelength.rs  mod.rs  spacing.rs
src/lint/rules/tests/: common.rs  mod.rs
src/lint/rules/tests/indentation/: closing_brace.rs  code_block.rs  continuation_line.rs  in10.rs  (+9 more)
src/scip/: mod.rs
src/server/: dispatch.rs  io.rs  message.rs  mod.rs
src/span/: mod.rs
src/test/: lsp_lookup_tests.rs  mod.rs
src/test/test_files/: basic_lookup.dml  cross_file_main.dml  goto_impl_test.dml  imported_file.dml  multi_level.dml  simple_symbolic.dml
src/vfs/: mod.rs
(+21 files in other folders)
